--- a/app/views/information/new.html.erb
+++ b/app/views/information/new.html.erb
@@ -1,9 +1,19 @@
-<h1>New information</h1>
-
+<% content_for :breadcrumb do %>
+<div class="row">
+  <div class="span12">
+    <ul class="breadcrumb">
+      <li><a href="dashboard.html">Dashboard</a> <span class="divider">/</span></li>
+      <li><a class="active" href="#">Carregar arquivo</a> <span class="divider">/</span></li>
+    </ul>
+  </div>
+</div>
+<% end -%>
 <%= form_tag(url_for_options = {action: :create, controller: :information}, options = {:multipart => true}) do %>
-	<strong><%= label_tag :file, 'Upload your file:' %></strong>
-  <%= file_field_tag :file %><br><br>
-  <%= submit_tag 'Send' %>
+	<h3>Carregar arquivo</h3>
+	<form class="form-inline">
+	  <%= file_field_tag :file %>
+	  <hr>
+	  <button type="submit" class="btn"><i class="icon-download"></i> Enviar</button>
 <% end %>
 
 <%= link_to 'Back', information_index_path %>
