--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,104 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ProjetoRailsCaixa</title>
+  <title>Projeto Caixa</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <style type="text/css">
+    body {
+      padding-top: 20px;
+      padding-bottom: 40px;
+      background: url("<%= asset_path 'dust.png' %>");
+    }
+
+    /* Custom container */
+    .container-narrow {
+      margin: 0 auto;
+      max-width: 900px;
+    }
+    .container-narrow > hr {
+      margin: 30px 0;
+    }
+
+    /* Main marketing message and sign up button */
+    .jumbotron {
+      margin: 60px 0;
+      text-align: center;
+    }
+    .jumbotron h1 {
+      font-size: 72px;
+      line-height: 1;
+    }
+    .jumbotron .btn {
+      font-size: 21px;
+      padding: 14px 24px;
+    }
+
+    /* Supporting marketing content */
+    .marketing {
+      margin: 60px 0;
+    }
+    .marketing p + h4 {
+      margin-top: 28px;
+    }
+
+    .form-signin {
+        max-width: 300px;
+        padding: 19px 29px 29px;
+        margin: 0 auto 20px;
+        background-color: #fff;
+        border: 1px solid #e5e5e5;
+        -webkit-border-radius: 5px;
+           -moz-border-radius: 5px;
+                border-radius: 5px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+      }
+      .form-signin .form-signin-heading,
+      .form-signin .checkbox {
+        margin-bottom: 10px;
+      }
+      .form-signin input[type="text"],
+      .form-signin input[type="email"],
+      .form-signin input[type="password"] {
+        font-size: 16px;
+        height: auto;
+        margin-bottom: 15px;
+        padding: 7px 9px;
+      }
+  </style>
 </head>
 <body>
 
-<%= yield %>
+	<div class="container container-narrow">
+
+    <div class="masthead">
+      <ul class="nav nav-pills pull-right">
+        <li class="active"><%= link_to "Home", root_path %></li>
+        <li><a href="#" class="link-green">About</a></li>
+        <li><a href="#" class="link-green">Contact</a></li>
+        <% if user_signed_in? %>
+        <li><%= link_to "Entrar no dashboard", information_index_path, class: 'link-green' %></li>
+        <% else %>
+        <li class="active"><%= link_to('Entrar', new_user_session_path, class: 'link-green')  %></li>
+        <% end -%>
+      </ul>
+      <h3 class="text-green">Project name</h3>
+    </div>
+
+    <hr class="soften">
+
+    <%= yield %>
+
+    <hr>
+
+    <div class="footer">
+      <p>&copy; Company 2012</p>
+    </div>
+
+  </div> <!-- /container -->
 
 </body>
 </html>
