--- a/app/views/information/_form.html.erb
+++ b/app/views/information/_form.html.erb
@@ -37,28 +37,15 @@
       </p>
     </div>
 
-    <div class="span5">
-      <p>
-        <b><%= f.label :municipio %></b>
-        <%= f.text_field :municipio %>
-      </p>
-    </div>
-    <div class="span3">
-      <p>
-        <b><%= f.label :estado %></b>
-        <%= f.text_field :estado %>
-      </p>
-    </div>
-
     <div class="span2">
       <p>
-        <b><%= f.label :telefone1 %></b>
+        <b><%= f.label :telefone1, "Telefone 1" %></b>
         <%= f.text_field :telefone1, class: 'span2' %>
       </p>
     </div>
     <div class="span2">
       <p>
-        <b><%= f.label :telefone2 %></b>
+        <b><%= f.label :telefone2, "Telefone 2" %></b>
         <%= f.text_field :telefone2, class: 'span2' %>
       </p>
     </div>
@@ -78,7 +65,7 @@
 
     <div class="span5">
       <p>
-        <b><%= f.label :ac %></b>
+        <b><%= f.label :ac, "A/C" %></b>
         <%= f.text_field :ac, class: 'span4' %>
       </p>
     </div>
